<resources>
    <string name="app_name">Cash Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_contact_title">Write your comments below</string>
    <string name="action_settings">Settings</string>
    <string name="action_send">SEND</string>
    <string name="action_save">SAVE</string>
    <string name="action_calculator">Calculator</string>
    <string name="action_check">Check my apps</string>
    <string name="prompt_fullname">Enter your Expensive</string>
    <string name="prompt_towhom">Whom</string>
    <string name="prompt_forwhat">For What</string>
    <string name="prompt_note">Note</string>
    <string name="prompt_cash">Cash</string>
    <string name="prompt_credit">Credit Card</string>
    <string name="prompt_saving">Debit Card</string>
    <string name="prompt_internet">Bank</string>
    <string name="prompt_lend">Lend</string>
    <string name="prompt_borrow">Borrow</string>
    <string name="text_expense">Your Expense:</string>
    <string name="text_method">Type:</string>
    <string name="text_date">Date:</string>

</resources>
