<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="7dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_margin="7dp"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/delete"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/buttonBackground"
            android:src="@drawable/delete" />

        <ImageView
            android:id="@+id/update"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/buttonBackground"
            android:src="@drawable/edit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/text_expense"
            android:textColor="@color/textHintColor"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/text_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/textColorDark"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/prompt_towhom"
            android:textColor="@color/textHintColor"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/text_to_whom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textColor="@color/textColorDark"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="40dp"
            android:text="@string/text_date"
            android:textColor="@color/textHintColor"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textColor="@color/textColorDark"
            android:textSize="13sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/text_method"
            android:textColor="@color/textHintColor"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/text_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textColor="@color/textColorDark"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="40dp"
            android:text="@string/prompt_forwhat"
            android:textColor="@color/textHintColor"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/text_for_what"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textColor="@color/textColorDark"
            android:textSize="13sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/prompt_note"
            android:textColor="@color/textHintColor"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/text_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textColor="@color/textColorDark"
            android:textSize="13sp" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:alpha="0.3"
        android:background="@color/textHintColor" />
</LinearLayout>

